Small update to Nike.ipynb

--- a/Nike.ipynb
+++ b/Nike.ipynb
@@ -11,7 +11,6 @@
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "from matplotlib.pyplot import figure as fig\n",
-    "from sklearn.linear_model import LinearRegression\n",
     "from scipy import optimize\n",
     "\n",
     "# Ignore numpy divide by zero errors in numpy\n",
@@ -283,7 +282,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's first take a look at the amount of transactions over time,"
+    "Let's first take a look at the amount of transactions over time."
    ]
   },
   {
@@ -427,7 +426,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "It seems like a few of the spikes line up with release dates, but other spikes don't. I wonder why? Let'see which models caused which spikes."
+    "It seems like a few of the spikes line up with release dates, but other spikes don't. Let's take a deeper look at which models caused which spikes."
    ]
   },
   {
@@ -497,21 +496,19 @@
    "source": [
     "*I went back to the non-log graph because even though this looks very congested between 0 and 25 the log-transformed graph looked worse.*\n",
     "\n",
-    "It turns out that StockX allows resells before the official drop. \n",
-    "\n",
-    "Not the prettiest graph in the world, but it does provide some insight as to when some of the hype for these releases started sales __before they were even released__! It could be better since the colors repeat, but for now , I have changed the linestyle so you can hopefully make out which lines are associated with each model. For example, the prominent orange line and spike in the middle is a shoe that was released at the line right before 2018-07!"
+    "Not the prettiest graph in the world, but it does provide some insight as to when some of the hype for these releases started sales __before they were even released__! It could be better since the colors repeat, but for now , I have changed the linestyle so you can hopefully make out which lines are associated with each model. It turns out that StockX allows resells before the official drop. For example, the prominent orange line and spike in the middle is a shoe that was released at the line right before 2018-07!"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Almost universally, we can see a steep decline in sales after the release date. This is likely due to the fact that the people who couldn't get it directly from Nike resorted to buying it second hand. It is also due to the fact that the hype around the shoes declines as people get the shoes and wear them. I've defined the hype \"dying\" as when it's average comes back to normal sale amounts. What I did was I created a model to fit the number of resells after the largest peak. Then, I analyzed after how long it took for the hype to die, based on my model."
+    "Almost universally, we can see a steep decline in sales after the release date. This is likely due to the fact that the people who couldn't get it directly from Nike resorted to buying it second hand. It is also due to the fact that the hype around the shoes declines as people get the shoes and wear them. I've defined the hype \"dying\" as when it's average comes back to normal sale amounts. What I did was I created a model to fit the number of resells after the largest peak. Then, I analyzed after how long it took for the hype to die, based on my model. It seems the data best fits on an logarithm line."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -520,7 +517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 25,
    "metadata": {
     "scrolled": true
    },
@@ -1189,14 +1186,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "It is clear that the shoes that had the later releases (not as much data) have a quicker hype \"death\" because the average of their resells are higher if there are only 10 days to account for while other models have over 300. That is one thing I want to improve in the next version or figure out a way to take that into account. With that caveat in mind, the Nike Air VaporMax had the longest hype run of 117 days before it reached the average resell amount!"
+    "It is clear that the shoes that had the later releases (not as much data) have a quicker hype \"death\" because the average of their resells are higher if there are only 10 days to account for while other models have over 300. That is one thing I want to improve in the next version or figure out a way to take that into account. With that caveat in mind, the Nike Air VaporMax had the longest hype run of 117 days before it reached the average resell amount!\n",
+    "\n",
+    "Even though some shoes had a higher peak, they also fell fast. Other shoes had a low peak but stayed above the average for a while longer than one would expect. On average, the Off-White x Nike models stayed above the average an estimated 58 days. That is about two months of hype generated **per model**!"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Another way of measuring hype would be the resale price. Often these limited releases cause sneakerheads to want them even more, which raises the prices. The below are the prices that these shoes resaled at. Compare those to the Retail Price. (Hint: Every single Sale Price is higher than the Retailed Price."
+    "Another way of measuring hype would be the resale price. Often these limited releases cause sneakerheads to want them even more, which raises the prices. The below are the prices that these shoes resaled at. Compare those to the Retail Price. (Hint: Every single Sale Price is higher than the Retailed Price.)"
    ]
   },
   {
@@ -1709,7 +1708,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1726,7 +1725,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Percentage of StockX's shoes sold from Nike x Off-White: 27,794 and from Yeezy: 72,162\n"
+      "Percentage of StockX's shoes sold that from Nike x Off-White: 27,794 and from Yeezy: 72,162\n"
      ]
     },
     {
@@ -1752,7 +1751,7 @@
     "plt.title('Total Shoes Sold')\n",
     "plt.show()\n",
     "\n",
-    "print(f'Percentage of StockX\\'s shoes sold from Nike x Off-White: {\"{:,}\".format(nike_shoes_sold)} and from Yeezy: {\"{:,}\".format(yeezy_shoes_sold)}')\n",
+    "print(f'Percentage of StockX\\'s shoes sold that from Nike x Off-White: {\"{:,}\".format(nike_shoes_sold)} and from Yeezy: {\"{:,}\".format(yeezy_shoes_sold)}')\n",
     "\n",
     "\n",
     "plt.pie([nike_revenue, yeezy_revenue], labels=['Nike', 'Yeezy'], autopct='%1.1f%%')\n",
